# phong-shading

./: CMakeLists.txt  README.md
src/: consts.h  drawing.cpp  drawing.h  main.cpp  phong.cpp  phong.h  vector_utils.cpp  vector_utils.h
